tests/NormalTests/paczka1/small_fuzzy/45558372.err
Error in line 11: S355 A409 648,0
Error in line 6: Iol9 S355 63,4
